<resources>
    <string name="app_name">USB Connect</string>
    <string name="app_title">Change USB Connection Method</string>
    <string name="action_settings">Settings</string>
    <string name="black" translatable="false">#261c1c</string>
    <string name="green" translatable="false">#0abc0a</string>

    <string name="textview">Important : this action will disconnect the current access method.
        Make sure you close any file manager windows &amp; unmount the device BEFORE starting!</string>
    <string name="textview0">Also, clear ALL running apps from the Recent
        Tasks list on your device, EXCEPT for this one of course =)</string>

    <string name="textview1">Result of setprop command shows here</string>
    <string name="textview2">Result of hsusb command shows here</string>
    <string name="no_selection">Choose a connection method first!</string>
    <string name="getpropfail">Unable to get property!</string>
    <string name="setpropfail">Unable to set property!</string>
    <string name="hsusbfail">File does not exist!</string>
    <string name="terminated">Command terminated :</string>
    <string name="exit_code">exit code</string>
    <string name="success">Success &#8230;</string>
    <string name="complete">script done</string>
    <string name="error">Error!</string>

    <string name="textview3">When you\'re ready, flick the switch\n to change your connection method</string>

    <string name="switch_text">USB Mass Storage is currently :</string>

    <string name="textview4">You should now be able to access\n the SD Card from your PC &#8230;</string>

    <string name="textview4a">Connection mode has been\n restored to normal</string>

    <string name="method_plus_adb">\n plus ADB is currently active</string>

    <string name="textview5">Initial checks indicate this app is incompatible
        with your device &#8230; there is nothing to do here!</string>

    <string name="warning">Please do NOT access SD Card from both OSs
        simultaneously &#8230; this will result in DATA LOSS!</string>

    <string name="tvGetRoot">Check for Root at Startup. Causes a brief stall,
        but provides YOU with more control over the goings-on</string>
    <string name="checkRootAtStart">Get Root Immediately</string>
    <string name="checkRootWhenNeeded">Only once Required</string>

    <string name="tvProtocol">Transfer Protocol when disconnected from UMS</string>
    <string name="rbMTP">MTP</string>
    <string name="rbPTP">PTP</string>

    <string name="icon_description">Toolbox Icon</string>
</resources>
