<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview0"
        android:id="@+id/textView0"
        android:layout_below="@+id/textView"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview3"
        android:id="@+id/textView3"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:layout_below="@+id/textView0"
        android:layout_centerHorizontal="true"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_text"
        android:id="@+id/mySwitch"
        android:enabled="false"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview1"
        android:id="@+id/textView1"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/mySwitch"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview2"
        android:id="@+id/textView2"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview4"
        android:id="@+id/textView4"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:width="240dp"
        android:textStyle="bold"
        android:textColor="#21d421"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview5"
        android:id="@+id/textView5"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:textColor="#ff0000"
        android:width="210dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ums"
        android:baselineAlignBottom="false"
        android:cropToPadding="false"
        android:contentDescription="@string/icon_description"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:minHeight="64dp"
        android:minWidth="64dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="110dp"/>

</RelativeLayout>
